# TITANIC-PASSENGER-SURVIVAL-STUDY

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  PROJECT_STRUCTURE.md  README (2).md  README.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  __init__.py  config.py  download  eda.py  loader.py  main.py  pipeline.py  pyproject.toml  requirements.txt  test_model.py  test_pipeline_smoke.py  titanic.csv
